# advent-of-code

./: .gitignore  README.md  clean.sh
2023/day-00/: Cargo.toml  README.md  input.txt
2023/day-00/src/: part1.rs
2023/day-01/: Cargo.toml
2023/day-01/src/: main.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: main.rs
2023/day-03/: Cargo.toml
2023/day-03/src/: main.rs  part1.rs  part2.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: part1.rs  part2.rs
2023/day-05/: Cargo.toml
2023/day-05/src/: part1.rs  part2.rs
2023/day-06/: Cargo.toml
2023/day-06/src/: part1.rs  part2.rs
2023/day-07/: Cargo.toml
2023/day-07/src/: cards.rs  cardsv1.rs  cardsv2.rs  part1.rs  part2.rs
2023/day-08/: Cargo.toml
2023/day-08/src/: maps.rs  part1.rs  part2.rs
2023/day-09/: Cargo.toml
2023/day-09/src/: history.rs  part1.rs  part2.rs
2023/day-10/: Cargo.toml
2023/day-10/src/: main.rs  pipe.rs
2023/day-11/: Cargo.toml
2023/day-11/src/: main.rs  universe.rs
2023/day-12/: Cargo.toml
2023/day-12/src/: main.rs  springs.rs
2023/day-13/src/: main.rs
2023/day-14/src/: main.rs
2023/day-15/src/: main.rs
2023/day-16/: Cargo.toml
2023/day-16/src/: contraption.rs  main.rs
2023/day-18/src/: dig_plan.rs  main.rs
2023/day-19/: Cargo.toml
2024/day-03/: Cargo.toml
2024/day-04/: Cargo.toml
2025/day-04/: Cargo.toml
2025/day-05/: Cargo.toml
2025/day-06/: Cargo.toml
2025/day-07/: Cargo.toml
2025/day-08/: Cargo.toml
2025/day-09/: Cargo.toml
2025/day-11/: Cargo.toml
rust-aoc-utils/: Cargo.toml
rust-aoc-utils/src/: file.rs  grid.rs  lib.rs  ranges.rs
(+20 files in other folders)
