[package]
name = "day-04"
version = "0.1.0"
edition = "2021"

default-run = "part1"

[[bin]]
name = "part1"
path = "src/part1.rs"

# [[bin]]
# name = "part2"
# path = "src/part2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
regex = "1.10.2"
